thumbnailer (2.3-0ubuntu1) UNRELEASED; urgency=medium

  [ Michi Henning ]
  * Added man pages for thumbnailer-admin, thumbnailer-service,
    thumbnailer-settings, and vs-thumb.
  * Removed a bunch of lintian warnings and errors.
  * Removed source for persistent cache.
  * Added inactivity timeout to admin interface, so the service
    exits after 30 seconds if it is started only to, for example,
    retrieve the stats. Activity on the admin interface now keeps
    the service alive the same way activity on the thumbnailer interface does.
  * Added average hit and miss run length to stats returned by
    thumbnailer-admin.
  * Changed semantics for requests with (0,0) size. All requests are now
    clamped to a 1920x1920 bounding box.
  * Fixed incorrect timeout semantics for unexpected network errors.

  [ James Henstridge ]
  * Renamed QML package to qml-module-XXX format and add transitional
    package. (LP: #1342031)
  * Port QML module to use libthumbnailer-qt.

  [ Xavi Garcia ]
  * Add new libthumbnailer-qt1.0 library, providing a C++ client API.

  [ Albert Astals Cid ]
  * In QML image provider, only create QQuickTextureFactory when
    needed, fixing a memory leak when requests are cancelled. (LP:
    #1484914)

 -- Michi Henning <michi.henning@canonical.com>  Thu, 06 Aug 2015 15:13:17 +1000

thumbnailer (2.2+15.10.20150801-0ubuntu1) wily; urgency=medium

  [ Michi Henning ]
  * Compatibility fixes  for GCC 5, Boost 1.58, and Libapparmor 2.10.
  * Correctly initialise the cache stats after upgrading from an old
    cache version.
  * Rename clear-stats sub-command of thumbnailer-admin to zero-stats.

  [ James Henstridge ]
  * Pass a filename to the vs-thumb helper utility rather than a file
    descriptor.  This avoids the use of the fdsrc GStreamer element, which
    appears to be unstable on Wily.

  [ CI Train Bot ]
  * New rebuild forced.

 -- CI Train Bot <ci-train-bot@canonical.com>  Sat, 01 Aug 2015 04:32:14 +0000
